Add github build

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "qr-code-generator",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://YOUR_GITHUB_USERNAME.github.io/qr-code-generator",
+  "homepage": "https://pranjaldoshi96.github.io/qr-code-generator",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
